--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli-service": "^5.0.4",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "dotenv-webpack": "^7.1.0",
     "vue": "^2.6.14",
     "vue-router": "^4.0.14",
     "vuetify": "^2.6.0",
